--- a/app/src/main/res/layout/person_item.xml
+++ b/app/src/main/res/layout/person_item.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/people_icon"
+        android:layout_gravity="center_vertical"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
