--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.example.mac.xinlei1_sizebook.MainActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/view_count"
+        android:gravity="center"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -17,5 +25,6 @@
         android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
+
 
 </LinearLayout>
